--- a/holy-kitchen/estilos/style.css
+++ b/holy-kitchen/estilos/style.css
@@ -24,6 +24,19 @@ Azul: #2EDB8C
 }
 
 body, html {
+    background: url(../imagens/background.png) repeat;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
+}
+
+header {
+    background-color: white;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
