--- a/holy-kitchen/estilos/style.css
+++ b/holy-kitchen/estilos/style.css
@@ -7,8 +7,8 @@ Azul: #2EDB8C
 */
 
 @font-face {
-    font-family: Sunflower;
-    src: url(../fontes/Sunflower.otf) format('opentype');
+    font-family: Bohemian;
+    src: url(../fontes/Bohemian.otf) format('opentype');
 }
 
 @font-face {
@@ -48,7 +48,7 @@ footer {
     background-color: white;
     font-family: Louis;
     text-align: center;
-    margin-top: 10px;
+    margin: 10px;
 }
 
 footer > p > a {
