--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -7,8 +7,8 @@ Azul: #0066FF
 */
 
 @font-face {
-    font-family: Bohemian;
-    src: url(../fontes/Bohemian.otf) format('opentype');
+    font-family: Mermaid;
+    src: url(../fontes/Mermaid.ttf) format('opentype');
 }
 
 @font-face {
@@ -18,114 +18,60 @@ Azul: #0066FF
 
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 body, html {
+    margin: 0;
+    padding: 0;
     height: 100vh;
     width: 100vw;
+    overflow-x: hidden;
 }
-
-/* Estilização do menu*/
-
-header {
-    padding: 5px;
-    background-color: white;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: rgba(102, 101, 101, 0.24);
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: white;
-    
-}
-
-nav > div.menu {
-    position: relative;
-    display: inline-block;
-}
-
-nav > div.menu > button#menu-btn {
-    background-color: white;
-    color: black;
-    padding: 10px;
-    font-size: 24px;
-    border: none;
-    cursor: pointer;
-}
-
-nav > div.menu > button#menu-btn:hover {
-    color: #0066FF;
-}
-
-nav > div.menu > ul#menu-list {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 160px;
-    z-index: 1;
-    border-radius: 8px;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.596);
-}
-
-ul#menu-list > li {
-    list-style: none;
-}
-
-ul#menu-list > li > a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-ul#menu-list > li > a:hover {
-    background-color: white;
-    color: #0066FF;
-}
-
-div.menu:hover ul#menu-list {
-    display: block;
-}
-
-nav > h1#site-nome {
-    flex-grow: 1;
-    text-align: center;
-    font-size: 1.5em;
-}
-
-nav > h1#site-nome > a {
-    font-family: Bohemian;
-    text-decoration: none;
-    color: #E1523D;
-}
-
-nav > div#login-icon > a > span {
-    width: 24px;
-    height: 24px;
-    color: black;
-}
-
-div#login-icon > a > span:hover {
-    color: #0066FF;
-}
-
-/* Estilização do conteúdo  */
 
 main {
     position: relative;
     width: 90vw;
-    margin: auto;
+    margin: 0 auto;
     padding: 10px;
     text-align: center;
+}
+
+hr {
+    align-items: center;
+    border: none;
+    height: 1px;
+    background-color: #E1523D;
+    margin-bottom: 10px;
+}
+
+h2, h3, h4 {
+    font-family: Mermaid;
+    color: #E1523D;
+    font-size: 1.5em;
+}
+
+a {
+    text-decoration: none; 
+    cursor: pointer;  
+}
+
+a > h2:hover, a > h3:hover {
+    color: #0066FF;
+}
+
+a > p {
+    font-family: Louis;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: black;
+}
+
+a > p:hover {
+    color: #0066FF;
+    text-decoration: underline;
 }
 
 footer {
@@ -137,7 +83,6 @@ footer {
     border-top-width: 1px;
     border-top-style: solid;
     border-top-color: rgba(102, 101, 101, 0.24);
-
 }
 
 footer > p > a {
