--- a/holy-kitchen/estilos/index.css
+++ b/holy-kitchen/estilos/index.css
@@ -29,6 +29,7 @@ section > h2.linha {
     align-items: center;
     text-align: center;
     margin: 20px 0;
+    white-space: nowrap;
 }
 
 section > h2.linha::before,
@@ -36,7 +37,7 @@ section > h2.linha::after {
     content: "";
     flex: 1;
     border-bottom: 1px solid #e1533d8a;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 article {
