--- a/holy-kitchen/estilos/index.css
+++ b/holy-kitchen/estilos/index.css
@@ -6,6 +6,10 @@ Vermelho: #E1523D
 Azul: #2EDB8C
 */
 
+section {
+    padding: 5px;
+}
+
 main > section#main {
     margin: 10px;
     text-align: center;
@@ -42,7 +46,9 @@ section > h2.linha::after {
 
 article {
     margin-top: 10px;
+    padding: 5px;
 }
+
 
 
 
