--- a/holy-kitchen/estilos/contato.css
+++ b/holy-kitchen/estilos/contato.css
@@ -6,6 +6,12 @@ Vermelho: #E1523D
 Azul: #0066FF
 */
 
+main {
+    position: relative;
+    width: 100vw;
+    height: 100vh;  
+}
+
 h2 {
     font-size: 2em;
 }
@@ -14,7 +20,7 @@ p {
     padding: 5px;
 }
 
-div {
+main > div {
     margin: 8px;
     padding: 5px;
 }
