--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -29,6 +29,7 @@ body, html {
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 main {
@@ -56,6 +57,7 @@ img {
     height: auto;
     display: block;
     margin: 0 auto;
+    border-radius: 20px;
 }
 
 h2, h3, h4 {
