--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -29,7 +29,7 @@ body, html {
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
-    overflow-y: visible;
+    overflow-y: scroll;
 }
 
 main {
