--- a/holy-kitchen/estilos/header.css
+++ b/holy-kitchen/estilos/header.css
@@ -75,6 +75,7 @@ nav > h1#site-nome {
     flex-grow: 1;
     text-align: center;
     font-size: 1.5em;
+    margin-left: 10px;
 }
 
 nav > h1#site-nome > a {
@@ -92,4 +93,53 @@ nav > div#login-icon > a > span {
 
 div#login-icon > a > span:hover {
     color: #0066FF;
+}
+
+
+/* Estilos para versões de tela maiores (mínimo 769px) */
+
+@media screen and (min-width: 769px) and (max-width: 992px) {
+
+    nav {
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: center;
+    }
+
+    nav > div.menu > button#menu-btn {
+        display: none; /* Esconder o botão de menu */
+    }
+
+    nav > h1#site-nome {
+        justify-self: start;
+        grid-column: 1 / 2;
+        font-size: 1.3em;
+    }
+
+    nav > div.menu > ul#menu-list {
+        display: flex;
+        justify-self: center;
+        gap: 20px;
+        box-shadow: none;
+        background-color: transparent;
+        grid-column: 2 / 3;
+    }
+
+    ul#menu-list > li {
+        display: inline-block;
+    }
+
+    ul#menu-list > li > a {
+        padding: 0px;
+        font-size: 18px;
+        color: black;
+        text-decoration: none;
+    }
+
+    nav > div#login-icon {
+        grid-column: 3 / 4;
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 10px;
+    }
 }
