--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -36,6 +36,7 @@ main {
     margin: 0 auto;
     padding: 10px;
     text-align: center;
+    background-color: white;
 }
 
 hr {
@@ -113,7 +114,7 @@ p.veja-tambem > a:hover {
 
 footer {
     width: 90wv;
-    background-color: white;
+    background-color: #E1523D;
     font-family: Louis;
     text-align: center;
     padding: 5px;
@@ -122,9 +123,14 @@ footer {
     border-top-color: rgba(102, 101, 101, 0.24);
 }
 
+footer > p {
+    color: white;
+}
+
 footer > p > a {
-    color: #E1523D;
+    color: white;
     font-weight: bold;
+    text-decoration: underline;
 }
 
 footer > p > a:hover {
