--- a/holy-kitchen/estilos/contato.css
+++ b/holy-kitchen/estilos/contato.css
@@ -31,7 +31,7 @@ h3 {
 
 a {
     font-size: 1.1em;
-    text-decoration: none;
+    text-decoration: underline;
     color: black;
     cursor: pointer;
 }
