--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -26,7 +26,7 @@ Azul: #0066FF
 body, html {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
@@ -35,8 +35,7 @@ main {
     width: 90vw;
     margin: 0 auto;
     padding: 10px;
-    text-align: center;
-    background-color: white;
+    text-align: center; 
 }
 
 hr {
@@ -52,7 +51,8 @@ a > picture > img {
 }
 
 img {
-    max-width: 90%;
+    object-fit: cover;
+    max-width: 100%;
     height: auto;
     display: block;
     margin: 0 auto;
@@ -99,7 +99,8 @@ ul {
 p.veja-tambem {
     font-family: Mermaid;
     color: #E1523D;
-    font-size: 1.2em;
+    font-size: 1.3em;
+    margin: 15px;
 }
 
 p.veja-tambem > a {
@@ -113,7 +114,6 @@ p.veja-tambem > a:hover {
 }
 
 footer {
-    width: 90wv;
     background-color: #E1523D;
     font-family: Louis;
     text-align: center;
