--- a/holy-kitchen/estilos/destaque.css
+++ b/holy-kitchen/estilos/destaque.css
@@ -17,7 +17,14 @@ h3 {
 }
 
 h3.info, ul.info-list {
-    text-align: justify;
+    text-align: left;
+    padding-left: none;
+    margin: 0;
+}
+
+ul.info-list {
+    margin-bottom: 10px;
+    font-size: 1em;
 }
 
 section > h3.linha {
@@ -36,35 +43,10 @@ article {
     text-align: justify;
 }
 
-/* Estilos para telas maiores (mínimo 769px)*/
+/* Estilização para telas maiores (tablets) */
 
-@media screen and (min-width: 769px) and (max-width: 992px) {
+@media (min-width: 768px) {
 
-    main > div.introducao {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 20px;
-    }
-
-    div.introducao > div.imagem {
-        flex: 1;
-    }
-
-    div.imagem > img {
-        width: 100%;
-        height: auto;
-        float: right;
-    }
-
-    div.introducao > div.receita {
-        flex: 1;
-        padding: 0 20px;
-        max-width: 500px;
-        float: left;
-    }
-
-    div.receita > h2, div.receita > p {
-        margin: 0px;
-    }
+    
 }
+
