--- a/holy-kitchen/estilos/dicas.css
+++ b/holy-kitchen/estilos/dicas.css
@@ -28,6 +28,10 @@ h3.linha {
     text-align: justify;
 }
 
+p#lembrete {
+    font-weight: bold;
+}
+
 .linha {
     display: flex;
     align-items: center;
@@ -43,4 +47,106 @@ h3.linha {
 div.conteudo > strong {
     display: inline-block;
     margin: 5px;
+    text-decoration: underline;
+}
+
+/* Estilização para telas maiores (tablets) */
+
+@media (min-width: 768px) {
+
+    main {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    h2 {
+        font-size: 2.5em;
+        margin: 16px;
+    }
+
+    h3 {
+        font-size: 2.2em;
+    }
+
+    h4 {
+        font-size: 1.7em;
+    }
+
+    div > p {
+        font-size: 1.2em;
+        line-height: 1.5;
+        text-align: justify;
+        margin-bottom: 10px;
+    }
+
+    strong {
+        font-size: 1.1em;
+    }
+
+    .conteudo {
+        margin: 20px auto;
+    }
+
+    .conteudo > p {
+        text-align: center;
+    }
+
+    section > ul {
+        font-size: 1.1em;
+        margin-bottom: 15px;
+    }
+
+    section > ul > li {
+        padding: 3px;
+    }
+
+    p#lembrete {
+        font-size: 1.2em;
+        font-weight: bold;
+    }
+
+    .linha::after {
+        border-bottom: 1px solid rgba(102, 101, 101, 0.6);
+    }
+}
+
+/* Estilização para telas maiores (desktops) */
+
+@media (min-width: 1024px) {
+
+    main {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 30px;
+    }
+
+    h2 {
+        font-size: 3em;
+    }
+
+    h3 {
+        font-size: 2.7;
+    }
+
+    div > p {
+        font-size: 1.5em;
+    }
+
+    strong {
+        font-size: 1.3em;
+    }
+
+    .conteudo {
+        margin: 30px auto;
+    }
+
+    section > ul {
+        font-size: 1.4em;
+        margin-bottom: 15px;
+    }
+
+    p#lembrete {
+        font-size: 1.5em;
+    }
 }
