--- a/holy-kitchen/estilos/global.css
+++ b/holy-kitchen/estilos/global.css
@@ -57,6 +57,7 @@ img {
     display: block;
     margin: 0 auto;
     border-radius: 20px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.329);
 }
 
 h2, h3, h4 {
