--- a/holy-kitchen/estilos/media-query.css
+++ b/holy-kitchen/estilos/media-query.css
@@ -2,12 +2,14 @@
 
 @media screen and (min-width: 769px) {
 
+
     main {
         width: 90vw;
         max-width: 1200px;
         margin: 0 auto;
         padding: 10px;
         text-align: center;
+        background-color: white;
     }
 
     
