--- a/sweet-flame/style.css
+++ b/sweet-flame/style.css
@@ -23,13 +23,16 @@ header > div#frete {
     color: #ffe2d0;
     font-family: Revise;
     text-align: center;
-    height: 40px;
+    height: 50px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
 }
 
 div#frete > p {
     padding: 10px;
     text-decoration: underline;
+    align-self: center;
 }
 
 header > div#title {
@@ -110,6 +113,7 @@ main > section#cupom {
 }
 
 section#cupom > p {
+    color: white;
     padding: 10px;
     font-family: Revise;
     font-size: 1.5em;
@@ -131,4 +135,30 @@ section#cupom > button {
 
 section#cupom > button:hover {
     text-decoration: underline;
+}
+
+h2 {
+    font-family: Revise;
+    font-size: 1.7em;
+    margin: 20px;
+}
+
+section#colection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    margin: 20px;
+    padding: 10px;
+}
+
+section#colection > div {
+    align-self: center;
+}
+
+section#colection > div > img {
+    height: 200px;
+    width: 150px;
+    border-radius: 150px 150px 0 0;
 }
